--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'scrabble-cluster41'
 version = '1.0'
 
 ext {
-    javaMainClass = 'Domini.DriverDomini'
+    javaMainClass = 'Presentacio.ControladorPresentacio'
 }
 
 application {
