--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'scrabble-cluster41'
 version = '1.0'
 
 ext {
-    javaMainClass = 'Domini.DriverDomini'
+    javaMainClass = 'Presentacio.ControladorPresentacio'
 }
 
 application {
@@ -48,6 +48,6 @@ repositories {
 
 dependencies {
     // this is just an example of importing an external library, you do not need to use it in your project
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.13.1'
     testImplementation('junit:junit:4.13.1')
 }
